[workspace]
members = [
    "callback",
    "feature-set",
    "log-collector",
    "measure",
    "metrics",
    "program-runtime",
    "programs/bpf_loader",
    "programs/loader-v4",
    "rent-calculator",
    "svm",
    "syscalls",
    "test-harness",
    "timings",
    "transaction",
    "transaction-context",
    "type-overrides",
]

exclude = [
    # workspace resolution logic, which expects it in the top-level worspace rather than
    # dev-bins
    "programs/sbf",
    "svm/tests/example-programs",
]

resolver = "2"

[workspace.package]
version = "4.0.0"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
description = "Solana Virtual Machine"
repository = "https://github.com/anza-xyz/agave"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust]
# List of rust-2024-compatibility lints that are already satisfied
# See https://doc.rust-lang.org/rustc/lints/groups.html
boxed_slice_into_iter = "deny"
dependency_on_unit_never_type_fallback = "deny"
deprecated_safe_2024 = "deny"
impl_trait_overcaptures = "deny"
missing_unsafe_on_extern = "deny"
never_type_fallback_flowing_into_unsafe = "deny"
rust_2024_guarded_string_incompatible_syntax = "deny"
rust_2024_incompatible_pat = "deny"
rust_2024_prelude_collisions = "deny"
static_mut_refs = "deny"
unsafe_attr_outside_unsafe = "deny"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

# Clippy lint configuration that cannot be applied in clippy.toml
[workspace.lints.clippy]
arithmetic_side_effects = "deny"
default_trait_access = "deny"
manual_let_else = "deny"
used_underscore_binding = "deny"

[workspace.dependencies]
agave-feature-set = "3.1.6"
agave-logger = "3.1.6"
agave-precompiles = "3.1.6"
agave-reserved-account-keys = "3.1.6"
agave-syscalls = { path = "syscalls", features = ["agave-unstable-api"] }
agave-validator = "3.1.6"
ahash = "0.8.11"
assert_matches = "1.5.0"
base64 = "0.22.1"
bencher = "0.1.5"
bincode = "1.3.3"
borsh = "1.5.1"
cfg-if = "1.0.0"
criterion = "0.8.1"
crossbeam-channel = "0.5.15"
eager = "0.1.0"
ed25519-dalek = "2.1.1"
enum-iterator = "2.3.0"
env_logger = "0.11.8"
futures = "0.3.31"
gethostname = "1.1.0"
itertools = "0.14.0"
libsecp256k1 = { version = "0.6.0", default-features = false, features = [
    "std",
    "static-context"
] }
log = "0.4.29"
openssl = "0.10.71"
percentage = "0.1.0"
prost = "0.11.9"
prost-build = "0.11.9"
protosol = "2.0.0"
qualifier_attr = "0.2.0"
rand = "0.9.2"
rand0-7 = { package = "rand", version = "0.7" }
reqwest = { version = "0.12.28", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serial_test = "3.3.1"
shuttle = "0.7.1"
solana-account = "3.3.0"
solana-account-info = "3.1.0"
solana-bincode = "3.1.0"
solana-bpf-loader-program = { path = "programs/bpf_loader", features = ["agave-unstable-api"] }
solana-builtins = "3.1.6"
solana-clock = "3.0.0"
solana-cluster-type = "3.0.0"
solana-compute-budget = "3.1.0"
solana-compute-budget-interface = "3.0.0"
solana-compute-budget-program = "3.1.0"
solana-ed25519-program = "3.0.0"
solana-epoch-rewards = "3.0.0"
solana-epoch-schedule = "3.0.0"
solana-fee-calculator = "3.0.0"
solana-fee-structure = "3.0.0"
solana-frozen-abi = "3.1.2"
solana-frozen-abi-macro = "3.2.1"
solana-hash = "4.0.1"
solana-instruction = "3.0.0"
solana-instruction-error = "2.1.0"
solana-instructions-sysvar = "3.0.0"
solana-keypair = "3.0.0"
solana-last-restart-slot = "3.0.0"
solana-loader-v3-interface = "6.1.0"
solana-loader-v4-interface = "3.1.0"
solana-loader-v4-program = { path = "programs/loader-v4", features = ["agave-unstable-api"] }
solana-message = "3.0.1"
solana-metrics = { path = "metrics", features = ["agave-unstable-api"] }
solana-native-token = "3.0.0"
solana-nonce = "3.0.0"
solana-nonce-account = "3.0.0"
solana-packet = "4.0.0"
solana-precompile-error = "3.0.0"
solana-program = "3.0.0"
solana-program-binaries = "3.1.6"
solana-program-entrypoint = "3.1.1"
solana-program-pack = "3.0.0"
solana-program-runtime = { path = "program-runtime", features = ["agave-unstable-api"] }
solana-pubkey = "4.0.0"
solana-rent = "3.1.0"
solana-sbpf = { version = "0.13.1", default-features = false }
solana-sdk-ids = "3.1.0"
solana-secp256k1-program = "3.0.0"
solana-secp256r1-program = "3.0.0"
solana-sha256-hasher = "3.1.0"
solana-signature = "3.1.0"
solana-signer = "3.0.0"
solana-slot-hashes = "3.0.0"
solana-stable-layout = "3.0.0"
solana-stake-interface = "2.0.2"
solana-svm = { path = "svm" }
solana-svm-callback = { path = "callback", features = ["agave-unstable-api"] }
solana-svm-feature-set = { path = "feature-set", features = ["agave-unstable-api"] }
solana-svm-log-collector = { path = "log-collector", features = ["agave-unstable-api"] }
solana-svm-measure = { path = "measure", features = ["agave-unstable-api"] }
solana-svm-test-harness-fixture = { path = "test-harness/fixture" }
solana-svm-test-harness-instr = { path = "test-harness/instr" }
solana-svm-timings = { path = "timings", features = ["agave-unstable-api"] }
solana-svm-transaction = { path = "transaction", features = ["agave-unstable-api"] }
solana-svm-type-overrides = { path = "type-overrides", features = ["agave-unstable-api"] }
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
solana-system-program = "3.1.0"
solana-system-transaction = "3.0.0"
solana-sysvar = "3.1.1"
solana-sysvar-id = "3.0.0"
solana-time-utils = "3.0.0"
solana-transaction = "3.0.2"
solana-transaction-context = { path = "transaction-context", features = ["agave-unstable-api"] }
solana-transaction-error = "3.0.0"
spl-generic-token = "2.0.1"
spl-token-interface = "2.0.0"
static_assertions = "1.1.0"
test-case = "3.3.1"
thiserror = "2.0.17"

[patch.crates-io]
agave-syscalls = { path = "syscalls" }
solana-svm-feature-set = { path = "feature-set" }
solana-program-runtime = { path = "program-runtime" }

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
split-debuginfo = "off"

[profile.release]
split-debuginfo = "unpacked"
lto = "thin"

[profile.release-with-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

# curve25519-dalek uses the simd backend by default in v4 if possible,
# which has very slow performance on some platforms with opt-level 0,
# which is the default for dev and test builds.
# This slowdown causes certain interactions in the solana-test-validator,
# such as verifying ZK proofs in transactions, to take much more than 400ms,
# creating problems in the testing environment.
# To enable better performance in solana-test-validator during tests and dev builds,
# we override the opt-level to 3 for the crate.
[profile.dev.package.curve25519-dalek]
opt-level = 3
