[package]
name = "solana-svm-feature-set"
description = "Solana SVM Feature Set"
version = "4.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = false

[features]
agave-unstable-api = []

[dependencies]

[lints]
workspace = true
