[package]
name = "solana-svm-log-collector"
description = "Solana log collector"
documentation = "https://docs.rs/solana-svm-log-collector"
version = "4.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
agave-unstable-api = []

[dependencies]
log = { workspace = true }
