[package]
name = "solana-svm-measure"
description = "Timing measurement utilities for SVM"
documentation = "https://docs.rs/solana-svm-measure"
version = "4.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
agave-unstable-api = []
