[package]
name = "solana-svm"
description = "Solana SVM"
documentation = "https://docs.rs/solana-svm"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = "2024"
publish = ["kellnr"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "solana_svm"

[features]
agave-unstable-api = []
dev-context-only-utils = [
    "dep:qualifier_attr",
    "solana-program-runtime/dev-context-only-utils",
]
frozen-abi = [
    "dep:solana-frozen-abi",
    "dep:solana-frozen-abi-macro",
    "solana-program-runtime/frozen-abi",
]
shuttle-test = [
    "solana-bpf-loader-program/shuttle-test",
    "solana-loader-v4-program/shuttle-test",
    "solana-program-runtime/shuttle-test",
    "solana-svm-type-overrides/shuttle-test",
]
svm-internal = ["dep:qualifier_attr"]

[dependencies]
ahash = { workspace = true }
log = { workspace = true }
percentage = { workspace = true }
qualifier_attr = { workspace = true, optional = true }
serde = { workspace = true, features = ["rc"] }
solana-account = { workspace = true }
solana-clock = { workspace = true }
solana-fee-structure = { workspace = true }
solana-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
solana-frozen-abi-macro = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
solana-hash = { workspace = true }
solana-instruction = { workspace = true, features = ["std"] }
solana-instructions-sysvar = { workspace = true }
solana-loader-v3-interface = { workspace = true, features = ["bincode"] }
solana-loader-v4-interface = { workspace = true }
solana-loader-v4-program = { registry = "kellnr", version = "4.0.0" }
solana-message = { workspace = true }
solana-nonce = { workspace = true }
solana-nonce-account = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-pack = { workspace = true }
solana-program-runtime = { registry = "kellnr", version = "4.0.0", features = ["metrics"] }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-sdk-ids = { workspace = true }
solana-svm-callback = { registry = "kellnr", version = "4.0.0" }
solana-svm-feature-set = { registry = "kellnr", version = "4.0.0" }
solana-svm-log-collector = { registry = "kellnr", version = "4.0.0" }
solana-svm-measure = { registry = "kellnr", version = "4.0.0" }
solana-svm-timings = { registry = "kellnr", version = "4.0.0" }
solana-svm-transaction = { registry = "kellnr", version = "4.0.0" }
solana-svm-type-overrides = { registry = "kellnr", version = "4.0.0" }
solana-system-interface = { workspace = true }
solana-sysvar-id = { workspace = true }
solana-transaction-context = { registry = "kellnr", version = "4.0.0" }
solana-transaction-error = { workspace = true }
spl-generic-token = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
agave-logger = { workspace = true }
agave-syscalls = { registry = "kellnr", version = "4.0.0" }
assert_matches = { workspace = true }
bincode = { workspace = true }
ed25519-dalek = { workspace = true }
libsecp256k1 = { workspace = true }
openssl = { workspace = true }
rand0-7 = { workspace = true }
shuttle = { workspace = true }
solana-bpf-loader-program = { registry = "kellnr", version = "4.0.0" }
solana-clock = { workspace = true }
solana-compute-budget = { workspace = true }
solana-compute-budget-interface = { workspace = true }
solana-compute-budget-program = { workspace = true }
solana-ed25519-program = { workspace = true }
solana-epoch-schedule = { workspace = true }
solana-fee-calculator = { workspace = true }
solana-keypair = { workspace = true }
solana-native-token = { workspace = true }
solana-precompile-error = { workspace = true }
solana-program-binaries = { workspace = true }
solana-program-runtime = { registry = "kellnr", version = "4.0.0", features = ["dev-context-only-utils"] }
solana-pubkey = { workspace = true, features = ["rand"] }
solana-rent = { workspace = true }
solana-sbpf = { workspace = true, features = ["jit"] }
solana-secp256k1-program = { workspace = true, features = ["bincode"] }
solana-secp256r1-program = { workspace = true, features = ["openssl-vendored"] }
solana-signature = { workspace = true, features = ["rand"] }
solana-signer = { workspace = true }
# See order-crates-for-publishing.py for using this unusual `path = "."`
solana-svm = { path = ".", features = ["agave-unstable-api", "dev-context-only-utils", "svm-internal"] }
solana-system-program = { workspace = true }
solana-system-transaction = { workspace = true }
solana-sysvar = { workspace = true }
solana-transaction = { workspace = true, features = ["dev-context-only-utils"] }
solana-transaction-context = { registry = "kellnr", version = "4.0.0", features = ["dev-context-only-utils"] }
spl-token-interface = { workspace = true }
test-case = { workspace = true }

[lints]
workspace = true
