[package]
name = "agave-syscalls"
description = "Agave implementation of the Solana syscalls."
documentation = "https://docs.rs/agave-syscalls"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = ["kellnr"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["metrics"]
agave-unstable-api = []
metrics = ["solana-program-runtime/metrics"]
shuttle-test = [
    "solana-program-runtime/shuttle-test",
    "solana-sbpf/shuttle-test",
    "solana-svm-type-overrides/shuttle-test",
]
svm-internal = []

[dependencies]
bincode = { workspace = true }
libsecp256k1 = { workspace = true }
num-traits = "0.2.19"
solana-account = { workspace = true }
solana-account-info = { workspace = true }
solana-big-mod-exp = "3.0.0"
solana-blake3-hasher = { version = "3.1.0", features = ["blake3"] }
solana-bn254 = "3.2.1"
solana-clock = { workspace = true }
solana-cpi = "3.1.0"
solana-curve25519 = "4.0.0"
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-keccak-hasher = { version = "3.1.0", features = ["sha3"] }
solana-poseidon = "4.0.0"
solana-program-entrypoint = { workspace = true }
solana-program-runtime = { registry = "kellnr", version = "4.0.0" }
solana-pubkey = { workspace = true }
solana-sbpf = { workspace = true, features = ["jit"] }
solana-sdk-ids = { workspace = true }
solana-secp256k1-recover = "3.1.0"
solana-sha256-hasher = { workspace = true }
solana-stable-layout = { workspace = true }
solana-stake-interface = { workspace = true }
solana-svm-feature-set = { registry = "kellnr", version = "4.0.0" }
solana-svm-log-collector = { registry = "kellnr", version = "4.0.0" }
solana-svm-type-overrides = { registry = "kellnr", version = "4.0.0" }
solana-sysvar = { workspace = true }
solana-sysvar-id = { workspace = true }
solana-transaction-context = { registry = "kellnr", version = "4.0.0", features = ["bincode"] }
thiserror = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
solana-epoch-rewards = { workspace = true }
solana-epoch-schedule = { workspace = true }
solana-fee-calculator = { workspace = true }
solana-last-restart-slot = { workspace = true }
solana-program = { workspace = true }
solana-program-runtime = { registry = "kellnr", version = "4.0.0", features = ["dev-context-only-utils"] }
solana-pubkey = { workspace = true, features = ["rand"] }
solana-slot-hashes = { workspace = true }
solana-transaction-context = { registry = "kellnr", version = "4.0.0", features = ["dev-context-only-utils"] }
test-case = { workspace = true }

[lints]
workspace = true
