[package]
name = "solana-bpf-loader-program"
description = "Solana BPF loader"
documentation = "https://docs.rs/solana-bpf-loader-program"
version = "4.0.0"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = "2024"
publish = ["kellnr"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "solana_bpf_loader_program"

[features]
default = ["metrics"]
agave-unstable-api = []
metrics = ["solana-program-runtime/metrics"]
sbpf-debugger = ["solana-sbpf/debugger"]
shuttle-test = [
    "solana-program-runtime/shuttle-test",
    "solana-sbpf/shuttle-test",
    "solana-svm-type-overrides/shuttle-test",
]
svm-internal = []

[dependencies]
agave-syscalls = { registry = "kellnr", version = "4.0.0" }
bincode = { workspace = true }
cfg-if = { workspace = true }
qualifier_attr = { workspace = true }
solana-account = { workspace = true }
solana-bincode = { workspace = true }
solana-clock = { workspace = true }
solana-instruction = { workspace = true }
solana-loader-v3-interface = { workspace = true, features = ["serde"] }
solana-loader-v4-interface = { workspace = true, features = ["bincode"] }
solana-packet = { workspace = true }
solana-program-entrypoint = { workspace = true }
solana-program-runtime = { registry = "kellnr", version = "4.0.0" }
solana-pubkey = { workspace = true }
solana-sbpf = { workspace = true, features = ["jit"] }
solana-sdk-ids = { workspace = true }
solana-svm-log-collector = { registry = "kellnr", version = "4.0.0" }
solana-svm-measure = { registry = "kellnr", version = "4.0.0" }
solana-svm-type-overrides = { registry = "kellnr", version = "4.0.0" }
solana-system-interface = { workspace = true }
solana-transaction-context = { registry = "kellnr", version = "4.0.0", features = ["bincode"] }

[dev-dependencies]
assert_matches = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
solana-bpf-loader-program = { path = ".", features = ["agave-unstable-api", "svm-internal"] }
solana-epoch-rewards = { workspace = true }
solana-epoch-schedule = { workspace = true }
solana-fee-calculator = { workspace = true }
solana-last-restart-slot = { workspace = true }
solana-program = { workspace = true }
solana-program-runtime = { registry = "kellnr", version = "4.0.0", features = ["dev-context-only-utils"] }
solana-pubkey = { workspace = true, features = ["rand"] }
solana-rent = { workspace = true }
solana-slot-hashes = { workspace = true }
solana-svm-callback = { registry = "kellnr", version = "4.0.0" }
solana-transaction-context = { registry = "kellnr", version = "4.0.0", features = ["dev-context-only-utils"] }
static_assertions = { workspace = true }
test-case = { workspace = true }

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "bpf_loader_upgradeable"
harness = false
