[package]
name = "solana-loader-v4-program"
description = "Solana Loader v4"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = "2024"
publish = ["kellnr"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "solana_loader_v4_program"

[features]
agave-unstable-api = []
shuttle-test = [
    "solana-program-runtime/shuttle-test",
    "solana-sbpf/shuttle-test",
    "solana-svm-type-overrides/shuttle-test",
]
svm-internal = []

[dependencies]
log = { workspace = true }
solana-account = { workspace = true }
solana-bincode = { workspace = true }
solana-bpf-loader-program = { registry = "kellnr", version = "4.0.0", features = ["svm-internal"] }
solana-instruction = { workspace = true }
solana-loader-v3-interface = { workspace = true }
solana-loader-v4-interface = { workspace = true, features = ["serde"] }
solana-packet = { workspace = true }
solana-program-runtime = { registry = "kellnr", version = "4.0.0" }
solana-pubkey = { workspace = true }
solana-sbpf = { workspace = true, features = ["jit"] }
solana-sdk-ids = { workspace = true }
solana-svm-log-collector = { registry = "kellnr", version = "4.0.0" }
solana-svm-measure = { registry = "kellnr", version = "4.0.0" }
solana-svm-type-overrides = { registry = "kellnr", version = "4.0.0" }
solana-transaction-context = { registry = "kellnr", version = "4.0.0" }

[dev-dependencies]
bincode = { workspace = true }
solana-clock = { workspace = true }
solana-sysvar = { workspace = true }
